<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinova_interface</name>
  <version>0.0.0</version>
  <description>Kinova Kortex ROS2 Middleware Interface</description>
  <maintainer email="jeremyallan@todo.todo">jeremyallan</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>