<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinova_reset</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ejcuryer@todo.todo">kinova</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
